alignment on nav fixed, padding an margins fixed, more responsive

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
     
 }
   
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 400px) {
     .column {
       width: 100%;
     }
@@ -27,18 +27,8 @@
     }
   }
 
-@media
-    only screen and (-webkit-min-device-pixel-ratio: 2),
-    only screen and (min--moz-device-pixel-ratio: 2),
-    only screen and (-moz-min-device-pixel-ratio: 2),
-    only screen and (-o-min-device-pixel-ratio: 2/1),
-    only screen and (min-device-pixel-ratio: 2),
-    only screen and (min-resolution: 192dpi),
-    only screen and (min-resolution: 2dppx) {
-}
-
 body {
-    width: 1000px;
+    width: 1140px;
     margin: 0 auto;
     color: #f8f8f8;
     background-image: url("https://i.imgur.com/c1P1Xh8.jpg");
@@ -58,7 +48,9 @@ body {
 
 .banner {
     padding: 5% 2%;
-    margin-top: 44%;
+    margin-top: 38%;
+    margin-bottom: 7%;
+    text-align: center;
 }
 
 h1 {
@@ -74,9 +66,9 @@ h1 {
 }
 
 h3 {
-    margin-bottom: 53%;
-    letter-spacing:32px;
-    font-size: 19px;
+    margin-bottom: 50%;
+    letter-spacing:43px;
+    font-size: 18px;
     font-style: normal;
     display: flex;
     flex-direction: row;
@@ -88,16 +80,17 @@ h3 {
 /*NAV*/
 
 .nav {
+    display: inline-table;
+    width:100%;
     color: white;
-    margin: -23%;
-    padding: 0%;
 }
+
 .nav ul {
+    width: 100%;
     background-color: #000000;
-    text-align: center;
-    padding: 1%;
-    margin: 2%;
     color: black;
+    padding-left: 0px;
+    padding-top: 9%; 
 }
 .nav li {
     display: inline;
@@ -119,29 +112,24 @@ h3 {
     width: 100%;
     height: auto;
     text-align: center;
-    display: block;
+    display: inherit;
+    margin-top: -13%
 }
 
 /*ABOUT ME*/
 
 .aboutme {
     padding-top: 33%;
-    margin: 9% 2% 3% 9%;
-    padding-bottom: 20%;
-}
-
-.about {
+    margin: 10% 5%;
+    padding-bottom: 35%;
     text-align: center;
-    padding-bottom: 5%;
-    margin-left: 14%;
-    margin-bottom: 10%;
 }
 
 .about h2 {
     text-align: center;
-    padding-right: 150px;
-    letter-spacing: 36px;
+    letter-spacing: 44px;
     font-size: 37px;
+    margin-bottom: 25%;
 }
 
 img.profile {
@@ -169,17 +157,19 @@ img.profile {
     text-align: justify;
     text-align-last: justify;
     margin: 9%;
+    padding: 6%;
 }
 
 /*LINKS*/
 
 .links{
-    display: inline block;
+    display: inherit;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .linkone {
-    margin: 5%;
-    padding-left:5%;
+    padding: 5%;
 }
 .linkone a {
     color: #f2f2f2;
@@ -200,25 +190,21 @@ img .linktwo .linkthree {
 
 /*LIBRARIES BOX*/
 
-.libimage {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: flex-end;
-}
-
 .containerone {
     position: relative;
     height: auto;
     width: 100%;
-    margin-right: 10%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
 }
 
 .libtextbox {
     position: absolute;
-    bottom: -46%;
-    left: 28%;
-    right: -12%;
+    bottom: -45%;
+    left: 15%;
+    right: -9%;
+    margin: 2%;
     background-color: #c5a1a1;
     columns: #000000;
     padding: 4%;
@@ -226,7 +212,7 @@ img .linktwo .linkthree {
 }
 
 .libtextbox h5 {
-    letter-spacing: 7px;
+    letter-spacing: 20px;
     font-size: 16px;
 }
 
@@ -238,20 +224,21 @@ img .linktwo .linkthree {
 /*THE FUTURE TEXT*/
 
 .future {
-    margin-top: 50%;
+    margin-top: 73%;
+    padding: 5%;
+    margin-bottom: 25%;
 }
 
 .future h3 {
     text-align: center;
-    letter-spacing: 36px;
+    letter-spacing: 44px;
     font-size: 45px;
-    margin-bottom: -20%;
+    margin-bottom: -13%;
 
 }
 
 .futuretext {
     padding: 29%;
-    margin: 0%;
     text-align: justify;
     text-align-last: justify;
 }
@@ -259,42 +246,47 @@ img .linktwo .linkthree {
 
 /*LIBU BOX*/
 
-.libuimage {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: flex-end;
-}
-
 .containertwo {
     position: relative;
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-self: auto;
     
 }
 
 .libutext {
     position: absolute;
-    bottom: -22%;
-    left: 29%;
-    right: 7%;
-    top: 86%;
+    bottom: -21%;
+    top: 79%;
+    left: 25%;
+    right: -9%;
+    margin: 3%;
     background-color: #c5a1a1;
     columns: #000000;
     padding: 2%;
     color: #000000;
-    text-align: justify;
 }
 
 .libutext h5 {
-    letter-spacing: 10px;
-    font-size: 16px;
+    letter-spacing: 24px;
+    font-size: 20px;
 }
+
+.libutext h6 {
+    letter-spacing: 15px;
+    font-size: 11px;
+}
+
 
 /*THE SITE*/
 
 .siteinfo {
-    padding: 38% 4% 24% 4%;
+    padding: 5%;
+    margin-top: 70%;
+    margin-bottom: 20%;
     text-align: center;
 }
 
@@ -313,8 +305,7 @@ img.logo {
 }
 
 .siteinfotext {
-    padding: 30%;
-    margin-bottom: -33%;
+    padding: 32%;
     text-align: justify;
     text-align-last: justify;
 }
@@ -360,7 +351,7 @@ img.logo {
     padding: 20px;
     width: 50%;
     display: block;
-    margin-top: 5%;
+    margin-top: 33%;
     margin-bottom: 5%;
     margin-left: auto;
     margin-right: auto;
